force-app/main/default/objects/objfordynamicvfpage__c/objfordynamicvfpage__c.object-meta.xml
<CustomObject>
    <label>objfordynamicvfpage</label>
    <nameField>
        <label>objfordynamicvfpage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>objfordynamicvfpages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>