force-app/main/default/objects/objfordynamicvfpage__c/fields/F1_Text__c.field-meta.xml
<CustomField>
    <fullName>F1_Text__c</fullName>
    <label>F1_Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>