force-app/main/default/objects/objfordynamicvfpage__c/fields/F2_Number__c.field-meta.xml
<CustomField>
    <fullName>F2_Number__c</fullName>
    <label>F2_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>