force-app/main/default/objects/objfordynamicvfpage__c/fields/F3_Ceckbox__c.field-meta.xml
<CustomField>
    <fullName>F3_Ceckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F3_Ceckbox</label>
    <type>Checkbox</type>
</CustomField>